--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Cherryberry" %></title>
-    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Cherryberry" %>">
-    <%= stylesheet_link_tag "application", :media => "all" %>
-    <%= javascript_include_tag "application" %>
-    <%= csrf_meta_tags %>
-    <%= yield(:head) %>
-  </head>
-  <body class="<%= controller_name %> <%= action_name %>">
-    <header class="navbar navbar-fixed-top">
-      <nav class="navbar-inner">
-        <div class="container">
-          <%= render 'layouts/navigation' %>
-        </div>
-      </nav>
-    </header>
-    <div id="main" role="main">
-      <div class="container">
-        <div class="content">
-           <div class="row">
-            <div class="span12">
-              <%= render 'layouts/messages' %>
-              <%= yield %>
-            </div>
-          </div>
-          <footer>
-          </footer>
-        </div>
-      </div> <!--! end of .container -->
-    </div> <!--! end of #main -->
-  </body>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title><%= content_for?(:title) ? yield(:title) : "Cherry Berry Quilts" %></title>
+		<meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Cherryberry" %>">
+		<%= stylesheet_link_tag "application", :media => "all" %>
+		<%= javascript_include_tag "application" %>
+		<%= csrf_meta_tags %>
+		<%= yield(:head) %>
+	</head>
+	<body class="<%= controller_name %> <%= action_name %>">
+		<header class="navbar navbar-fixed-top">
+			<nav class="navbar-inner">
+				<div class="container">
+					<%= render 'layouts/navigation' %>
+				</div>
+			</nav>
+		</header>
+		<div id="main" role="main">
+			<div class="container">
+				<div class="content">
+					<div class="row">
+						<div class="span12">
+							<%= render 'layouts/messages' %>
+							<%= yield %>
+						</div>
+					</div>
+					<footer>
+						<a href="http://www.babylock.com"> <%= image_tag("babylock.gif", :class => "image-asset pull-left", :width => "120", :alt => "Baby Lock Logo") %> </a>
+						<!-- BEGIN: Constant Contact Text Link Email List Button -->
+						<div class="center">
+							<a href="http://visitor.r20.constantcontact.com/d.jsp?llr=pc44fckab&p=oi&m=1110322445391"  target="_blank">Sign up for our Email Newsletter</a><br/>
+							<img src="https://imgssl.constantcontact.com/ui/images1/safe_subscribe_logo.gif" border="0" width="168" height="14" alt=""/><br/>
+							<small class="muted">For <a href="http://www.constantcontact.com/jmml/email-newsletter.jsp" target="_blank">Email Newsletters</a> you can trust</small>
+						</div>
+					</footer>
+				</div>
+			</div>
+			<!--! end of .container -->
+		</div>
+		<!--! end of #main -->
+	</body>
 </html>
