Setting min width for page

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,5 +1,5 @@
 @import "bootstrap";
-body { padding-top: 60px; }
+body { padding-top: 60px; min-width: 500px;}
 $maroon: #730e12;
 $tan: #e7e0c3;
 $darkblue: #334e81;
