Changing nav bar colors

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,5 +1,5 @@
 @import "bootstrap";
-body { padding-top: 60px; min-width: 500px;}
+body { padding-top: 60px; min-width: 545px;}
 $maroon: #730e12;
 $tan: #e7e0c3;
 $darkblue: #334e81;
@@ -9,18 +9,18 @@ $darktan: #730e11;
   padding-right: 20px;
   padding-left: 20px;
   background-color: #fafafa;
-  background-image: -moz-linear-gradient(top, #e7e0c3, #d1c492);
-  background-image: -ms-linear-gradient(top, #e7e0c3, #d1c492);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#e7e0c3), to(#d1c492));
-  background-image: -webkit-linear-gradient(top, #e7e0c3, #d1c492);
-  background-image: -o-linear-gradient(top, #e7e0c3, #d1c492);
-  background-image: linear-gradient(top, #e7e0c3, #d1c492);
+  background-image: -moz-linear-gradient(top, #730e12, #730e12);
+  background-image: -ms-linear-gradient(top, #730e12, #730e12);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#730e12), to(#730e12));
+  background-image: -webkit-linear-gradient(top, #730e12, #730e12);
+  background-image: -o-linear-gradient(top, #730e12, #730e12);
+  background-image: linear-gradient(top, #730e12, #730e12);
   background-repeat: repeat-x;
   border: 1px solid #d4d4d4;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#'e7e0c3, endColorstr='#'d1c492, GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#'730e12, endColorstr='#'730e12, GradientType=0);
   -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
      -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
           box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
@@ -34,7 +34,8 @@ $darktan: #730e11;
   font-size: 20px;
   font-weight: 200;
   line-height: 1;
-  color: #730e12;
+  color: #ffffff;
+  text-shadow: none;
 }
 
 .navbar .divider-vertical {
@@ -42,8 +43,21 @@ $darktan: #730e11;
   width: 1px;
   margin: 0 9px;
   overflow: hidden;
-  background-color: #730e12;
-  border-right: 1px solid #542425;
+  background-color: #ffffff;
+  border-right: 1px solid #ffffff;
+}
+
+.navbar .nav > li > a {
+  float: none;
+  padding: 10px 10px 11px;
+  line-height: 19px;
+  font-size: 14px;
+  color: #ffffff;
+  text-decoration: none;
+  text-shadow: none;
+  &:hover {
+    color: $tan;
+  }
 }
 
 .hero-unit, .well {
